Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-1579

osd_declare_xattr_set() doesn't reserve credits for version set

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.3.0, Lustre 2.4.0
    • None
    • None
    • 3
    • 4472

      In the osd_declare_xattr_set() for ldiskfs:

              if (strcmp(name, XATTR_NAME_VERSION) == 0) {
                      /* no credits for version */
                      return 0;
              }
      

      So if a caller calls only dt_version_set() to set inode version, the reserved credits for this transaction will be zero. I think we'd reserve 1 block for version set.

            niu Niu Yawei (Inactive)
            niu Niu Yawei (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved: