LU-1579 osd: reserve credits for set version

In current osd_declare_xattr_set(), we assume that version change is
always accompanied with inode changes, so we don't reserve extra
credits for the setting verison.

However, in the new quota design, we may issue a sole version change
without any other updates. I think osd_declare_xattr_set() should not
make assumption on the caller's behavior and reserve at least 1 block
for version change.

Signed-off-by: Niu Yawei <niu@whamcloud.com>
Change-Id: I77a13173eea8007b5300155e0d726bd82ace8ede